2002-11-08  Neil Jerram  <neil@ossau.uklinux.net>

	* goops.texi (Top): Say "Indices" before index nodes in main menu.
	(Index): Removed (it was empty).  Generally remove unnecessary
	padding text that looks bad in HTML.

2002-04-08  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (CLEANFILES): Added goops.tmp, goops.cps.

2001-12-03  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* goops.texi: Grammar fix.

2001-08-27  Neil Jerram  <neil@ossau.uklinux.net>

	* Makefile.am (goops_TEXINFOS): Remove ../AUTHORS.
	(TEXINFO_TEX): Added; avoids shipping multiple copies of
	texinfo.tex in a single distribution.

	* goops.texi: Incorporate text previously in separate AUTHORS
	file.

2001-08-27  Neil Jerram  <neil@ossau.uklinux.net>

	The change log for files in this directory continues backwards
	from 2001-08-27 in ../ChangeLog, as all the Guile documentation
	prior to this date was contained in a single directory.