@@ -1,3 +1,8 @@
+2003-04-17  Mikael Djurfeldt  <djurfeldt@nada.kth.se>
+
+	* goops.texi (Object Comparisons): Removed object-eqv? and
+	object-equal? and added eqv?, equal? and =.
+
 2002-11-08  Neil Jerram  <neil@ossau.uklinux.net>
 
 	* goops.texi (Top): Say "Indices" before index nodes in main menu.
